# Pong-AI

./: .gitignore  .gitmodules  CMakeLists.txt  __mcount_internal.annotation  build.sh  configure.sh  perf.data  run.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/dqn/: Agent.cpp  Agent.hpp  CMakeLists.txt  DQN.cpp  DQN.hpp  Memory.cpp  Memory.hpp  MiniBatchSGD.hpp  Random.hpp  Training.cpp  Training.hpp  activations.cpp  activations.hpp  activations.test.cpp  ring.hpp
src/pong/: Action.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  EpisodeParameter.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  ScoreManager.cpp  ScoreManager.hpp  constants.hpp  main.cpp
tests/: CMakeLists.txt
tests/dqn/: Agent.test.cpp  CMakeLists.txt  DQN.test.cpp  Memory.test.cpp  Training.test.cpp  activations.test.cpp
tests/game/: CMakeLists.txt  Game.test.cpp
